Script update to form the RTIR ticket info, print a message, direct to ticket info page and parsing update

--- a/app/SOCtopus.conf
+++ b/app/SOCtopus.conf
@@ -37,6 +37,8 @@ rtir_user = YOURRTIRUSER
 rtir_pass = YOURRTIRPASS
 rtir_queue = Incidents
 rtir_creator = root
+rtir_url_ticket = URLTOCHECKTICKETINFO
+rtir_classification = CLASSIFICATIONOFINCIDENT
 
 [slack]
 slack_url = YOURSLACKWORKSPACE
