--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 requests==2.21.0
 future==0.16.0
 werkzeug>=0.15.3
-elasticsearch==6.3.1
+elasticsearch==6.8.1
 Flask==1.0.2
 thehive4py==1.6.0
 rt==1.0.11
 grr-api-client==3.2.4.post9
 grr-response-proto==3.2.4.post9
 pymisp==2.4.103
+urllib3==1.21.1
