--- a/SOCtopus.conf
+++ b/SOCtopus.conf
@@ -1,5 +1,5 @@
 [es]
-es_url = http://elasticsearch:9200
+es_url = http://localhost:9200
 
 [fir]
 fir_url = YOURFIRURL
@@ -37,6 +37,8 @@ rtir_user = YOURRTIRUSER
 rtir_pass = YOURRTIRPASS
 rtir_queue = Incidents
 rtir_creator = root
+rtir_url_ticket = URLTOCHECKTICKETINFO
+rtir_classification = CLASSIFICATIONOFINCIDENT
 
 [slack]
 slack_url = YOURSLACKWORKSPACE
