--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,14 @@
 version: "2"
 services:
-  soctopus:
-    container_name: soctopus
+  cs-octopus:
+    container_name: cs-octopus
     build: ./
-    image: soctopus
+    image: cs-octopus
     networks:
       - so-elastic-net
     volumes:
-      - ~/soctopus/SOCtopus.conf:/SOCtopus/SOCtopus.conf:ro 
+      - /opt/orchestration/csoctopus/SOCtopus.conf:/SOCtopus/SOCtopus.conf:ro 
+      - /opt/orchestration/csoctopus/csoctopus.log:/SOCtopus/csoctopus.log:rw 
     ports:
       - "0.0.0.0:7000:7000"
 networks:
