--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 requests==2.21.0
 future==0.16.0
-werkzeug>=0.15.3
+werkzeug==0.11.3
 elasticsearch==6.8.1
-Flask==1.0.2
+Flask==0.12.5
 thehive4py==1.6.0
 rt==1.0.11
 grr-api-client==3.2.4.post9
